--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        export PYTHONPATH="calclib"
+        export PYTHONPATH="/home/runner/work/calclib_actions/calclib_actions/calclib"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
