--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      PYTHONPATH="/home/runner/work/calclib_actions/calclib_actions/calclib"
+      PYTHONPATH: "/home/runner/work/calclib_actions/calclib_actions/calclib"
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
