--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,8 +13,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: "/home/runner/work/calclib_actions/calclib_actions/calclib"
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
@@ -38,4 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest -v
+        python -m pytest -v
